--- a/Perchero/Perchero.csproj
+++ b/Perchero/Perchero.csproj
@@ -160,8 +160,14 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AviosController.cs" />
+    <Compile Include="Controllers\DetallePrendasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PedidoesController.cs" />
+    <Compile Include="Controllers\PrendasController.cs" />
+    <Compile Include="Controllers\TelasController.cs" />
+    <Compile Include="Controllers\TiposController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -169,10 +175,24 @@
     <Compile Include="Migrations\201701112337448_Inicial.Designer.cs">
       <DependentUpon>201701112337448_Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701180022269_TolosLosModelados.cs" />
+    <Compile Include="Migrations\201701180022269_TolosLosModelados.Designer.cs">
+      <DependentUpon>201701180022269_TolosLosModelados.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201701180108436_DetallePrendas.cs" />
+    <Compile Include="Migrations\201701180108436_DetallePrendas.Designer.cs">
+      <DependentUpon>201701180108436_DetallePrendas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Avio.cs" />
+    <Compile Include="Models\DetallePrenda.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Pedido.cs" />
+    <Compile Include="Models\Prenda.cs" />
+    <Compile Include="Models\Tela.cs" />
+    <Compile Include="Models\Tipo.cs" />
     <Compile Include="Models\UserRolesDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -240,6 +260,36 @@
     <Content Include="Views\Admin\EditUser.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\ViewAllRoles.cshtml" />
+    <Content Include="Views\Telas\Create.cshtml" />
+    <Content Include="Views\Telas\Delete.cshtml" />
+    <Content Include="Views\Telas\Details.cshtml" />
+    <Content Include="Views\Telas\Edit.cshtml" />
+    <Content Include="Views\Telas\Index.cshtml" />
+    <Content Include="Views\Tipos\Create.cshtml" />
+    <Content Include="Views\Tipos\Delete.cshtml" />
+    <Content Include="Views\Tipos\Details.cshtml" />
+    <Content Include="Views\Tipos\Edit.cshtml" />
+    <Content Include="Views\Tipos\Index.cshtml" />
+    <Content Include="Views\Avios\Create.cshtml" />
+    <Content Include="Views\Avios\Delete.cshtml" />
+    <Content Include="Views\Avios\Details.cshtml" />
+    <Content Include="Views\Avios\Edit.cshtml" />
+    <Content Include="Views\Avios\Index.cshtml" />
+    <Content Include="Views\Prendas\Create.cshtml" />
+    <Content Include="Views\Prendas\Delete.cshtml" />
+    <Content Include="Views\Prendas\Details.cshtml" />
+    <Content Include="Views\Prendas\Edit.cshtml" />
+    <Content Include="Views\Prendas\Index.cshtml" />
+    <Content Include="Views\DetallePrendas\Create.cshtml" />
+    <Content Include="Views\DetallePrendas\Delete.cshtml" />
+    <Content Include="Views\DetallePrendas\Details.cshtml" />
+    <Content Include="Views\DetallePrendas\Edit.cshtml" />
+    <Content Include="Views\DetallePrendas\Index.cshtml" />
+    <Content Include="Views\Pedidoes\Create.cshtml" />
+    <Content Include="Views\Pedidoes\Delete.cshtml" />
+    <Content Include="Views\Pedidoes\Details.cshtml" />
+    <Content Include="Views\Pedidoes\Edit.cshtml" />
+    <Content Include="Views\Pedidoes\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -254,6 +304,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201701112337448_Inicial.resx">
       <DependentUpon>201701112337448_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701180022269_TolosLosModelados.resx">
+      <DependentUpon>201701180022269_TolosLosModelados.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701180108436_DetallePrendas.resx">
+      <DependentUpon>201701180108436_DetallePrendas.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
