--- a/Perchero/Web.config
+++ b/Perchero/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Perchero-20170106082337.mdf;Initial Catalog=aspnet-Perchero-20170106082337;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Perchero-20170106082337.mdf;Initial Catalog=aspnet-Perchero-20170106082337;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+  <add name="Perchero" connectionString="Data Source=FrancPapu\SQLEXPRESS;Initial Catalog=Perchero;Integrated Security=False; MultipleActiveResultSets=True; User Id=sa; Password=12345678" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
