--- a/Perchero/Perchero.csproj
+++ b/Perchero/Perchero.csproj
@@ -247,6 +247,10 @@
     <Compile Include="Migrations\201707172141106_quitar_talle_a_prenda.Designer.cs">
       <DependentUpon>201707172141106_quitar_talle_a_prenda.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710180111306_aviosNoReq.cs" />
+    <Compile Include="Migrations\201710180111306_aviosNoReq.Designer.cs">
+      <DependentUpon>201710180111306_aviosNoReq.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Avio.cs" />
@@ -537,6 +541,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707172141106_quitar_talle_a_prenda.resx">
       <DependentUpon>201707172141106_quitar_talle_a_prenda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710180111306_aviosNoReq.resx">
+      <DependentUpon>201710180111306_aviosNoReq.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
